From Stéphane Bryant: remove the variables that the previous patch left unused

https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=6317

From me: Add hf[] entry for 'hf_reload_dmflag_underlay_hop'

svn path=/trunk/; revision=39308